[package]
name = "rust-text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.27", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tui = {version = "0.19", default-features = false, features = ["serde", "crossterm"]}
